--- a/index.html
+++ b/index.html
@@ -6,32 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="Assets/style.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <div class="row ">
-            <div class="col">
-                <ul class="list-inline uppercase">
-                    <li class="col-sm-2 list-inline-item nav-item">
-                        <a href="#"><i class="fa fa-trophy"></i>Trophy Fitness
-                     </a>
-                    </li>
-                    <li class="col-sm-2 list-inline-item nav-item">
-                        <a href="#">
-                        Join up!
-                        </a>
-                    </li>
-                    <li class="col-sm-2 list-inline-item nav-item">
-                        <a href="#">
-                        Members
-                        </a>
-                    </li>
-            </div>
-        </div>
+       <div class="navbar">
+           
+           <a class="active" href="#"><i class="fa fa-trophy"></i>  Trophy Fitness</a>
+           <a  href="#"><i class="fa fa-pencil"></i>  Join up!</a>
+           <a  href="#"><i class="fa fa-user"></i>  Members</a>
+           
+       </div>
     </header>
     <section>
 
