--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 
 <body>
     <header>
-       <div class="navbar">
-           
-           <a class="active" href="#"><i class="fa fa-trophy"></i>  Trophy Fitness</a>
-           <a  href="#"><i class="fa fa-pencil"></i>  Join up!</a>
-           <a  href="#"><i class="fa fa-user"></i>  Members</a>
-           
-       </div>
+        <div class="navbar">
+            <a class="active" href="index.html"><i class="fa fa-trophy"></i>Trophy Fitness</a>
+            <a href="joinus.html"><i class="fa fa-pencil"></i>Join up!</a>
+            <a href="members.html"><i class="fa fa-user"></i>Members</a>
+        </div>
     </header>
     <section>
 
