--- a/index.html
+++ b/index.html
@@ -6,23 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="Assets/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+
     <title>Document</title>
 </head>
 
 <body>
     <header>
         <div class="navbar">
-            <a class="active" href="index.html"><i class="fa fa-trophy"></i>Trophy Fitness</a>
-            <a href="joinus.html"><i class="fa fa-pencil"></i>Join up!</a>
-            <a href="members.html"><i class="fa fa-user"></i>Members</a>
+            <a class="active" href="index.html"><i class="fa fa-trophy"></i>   Dublin Fitness</a>
+            <a href="joinus.html"><i class="fa fa-pencil"></i>   Join up!</a>
+            <a href="members.html"><i class="fa fa-user"></i>   Members</a>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 facilities">
+                <p><i></i></p>
+            </div>
         </div>
     </header>
     <section>
-
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="assets/images/barbell.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Get Fitter!</h5>
+                        <p>With our state of the art equipment</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/images/weight.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Get Stronger!</h5>
+                        <p>With Personalised training plans</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/images/woman.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Get Leaner!</h5>
+                        <p>With Tailored diet plans</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+        </div>
     </section>
+    <div class="row">
+        <div class="col-lg-12 facilities">
+          <p class="facilities-icon"><i class="fa fa-heartbeat"></i>    Cardio Area</a>
+          <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i>    Strength Training</p>
+          <p class="facilities-icon"><i class="fa fa-cutlery"></i>    Diet Planning</p>
+        </div>
+    </div>
     <footer class="container-fluid">
+
         <div class="row">
             <div class="footer-section col-sm-4">
                 <h4 class="uppercase">Find us here!</h3>
@@ -58,6 +109,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
