--- a/joinus.html
+++ b/joinus.html
@@ -6,24 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="Assets/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+
     <title>Document</title>
 </head>
 
 <body>
     <header>
-       <div class="navbar">
-           
-           <a class="active" href="index.html"><i class="fa fa-trophy"></i>  Trophy Fitness</a>
-           <a  href="joinus.html"><i class="fa fa-pencil"></i>  Join up!</a>
-           <a  href="members.html"><i class="fa fa-user"></i>  Members</a>
-           
-       </div>
+        <div class="navbar ">
+            <a class="active" href="index.html"><i class="fa fa-trophy"></i>   Dublin Fitness</a>
+            <a href="joinus.html"><i class="fa fa-pencil"></i>   Join up!</a>
+            <a href="members.html"><i class="fa fa-user"></i>   Members</a>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 facilities">
+                <p><i></i></p>
+            </div>
+        </div>
     </header>
     <section>
+        <div class="row">
+            <div class="col-md-4 testimonials ">
+                <h2>Testimonials</h2>
+                <p>Jane Doe - "Dublin fitness helped me get in shape for my wedding i couldnt recommend them more" </p>
+                <p>John Doe - "The range of facilities and classes at Dublin Fitness is great. It reaally helps to sustain interest in working out"</p>
+                <p>Joe Doe - "I Tried every fad diet under the sun but Dublin Fitness really helped me lose weight and keep it off"</p>
+
+            </div>
+
+            <div class="col-md-8 join">
+                <h3>Come Join us today!</h3>
+                <p>Here at Dublin Fitness we want to help you achieve your fitness goals.Whether you want to get fitter,stronger or leaner we we tailor a fitness and diet plan to suit your exsisting lifestyle. With state of the art fitness equipment and
+                    a wide range of classes available we will help you find the most fun way to achieve your fitness goals. Join today to recieve a free one weeks trial!</p>
+                <button type="button" class="btn btn-success">Join up!</button>
+            </div>
+        </div>
 
     </section>
+    <div class="row">
+        <div class="col-lg-12 facilities">
+          <p class="facilities-icon"><i class="fa fa-heartbeat"></i>    Cardio Area</a>
+          <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i>    Strength Training</p>
+          <p class="facilities-icon"><i class="fa fa-cutlery"></i>    Diet Planning</p>
+        </div>
+    </div>
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-section col-sm-4">
