--- a/members.html
+++ b/members.html
@@ -6,24 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="Assets/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+
     <title>Document</title>
 </head>
 
 <body>
     <header>
-       <div class="navbar">
-           
-           <a class="active" href="index.html"><i class="fa fa-trophy"></i>  Trophy Fitness</a>
-           <a  href="joinus.html"><i class="fa fa-pencil"></i>  Join up!</a>
-           <a  href="members.html"><i class="fa fa-user"></i>  Members</a>
-           
-       </div>
+        <div class="navbar ">
+            <a class="active" href="index.html"><i class="fa fa-trophy"></i>   Dublin Fitness</a>
+            <a href="joinus.html"><i class="fa fa-pencil"></i>   Join up!</a>
+            <a href="members.html"><i class="fa fa-user"></i>   Members</a>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 facilities">
+            </div>
+        </div>
     </header>
     <section>
-
     </section>
+    <div class="row">
+      <div class="row">
+        <div class="col-lg-12 facilities">
+          <p class="facilities-icon"><i class="fa fa-heartbeat"></i>    Cardio Area</a>
+          <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i>    Strength Training</p>
+          <p class="facilities-icon"><i class="fa fa-cutlery"></i>    Diet Planning</p>
+        </div>
+    </div>
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-section col-sm-4">
