--- a/members.html
+++ b/members.html
@@ -21,55 +21,136 @@
         </div>
         <div class="row">
             <div class="col-lg-12 facilities">
+                <p></p>
             </div>
         </div>
     </header>
     <section>
+        <div class="row">
+            <div class="col-md-4 testimonials ">
+                <h2>Classes</h2>
+                <p></p>
+                <p>John Doe - "The range of facilities and classes at Dublin Fitness is great. It reaally helps to sustain interest in working out"</p>
+                <p>Joe Doe - "I Tried every fad diet under the sun but Dublin Fitness really helped me lose weight and keep it off"</p>
+            </div>
+
+            <div class="col-md-8 timetable">
+                <div class="row timetable-item">
+                    <div class="col-md-2">
+                        <h2>Mon.</h2>
+                        <p>Kettlebells-6am</p>
+                        <p>Yoga-7am</p>
+                        <p>Trx-1pm</p>
+                        <p>Spin-5pm</p>
+                    </div>
+
+                    <div class="col-md-2">
+                        <h2>Tue.</h2>
+                        <p>Spin-7am</p>
+                        <p>Core-1pm</p>
+                        <p>Pilates-6pm</p>
+                        <p>Dance-7pm</p>
+                    </div>
+                    <div class="col-md-2">
+                        <h2>Wed.</h2>
+                        <p>Yoga-7am</p>
+                        <p>HIIT-1pm</p>
+                        <p>Core-6pm</p>
+                        <p>Functional training-7pm</p>
+                    </div>
+                    <div class="col-md-2">
+                        <h2>Thurs.</h2>
+                        <p>HIIT-6am</p>
+                        <p>Yoga-7am</p>
+                        <p>Core-6pm</p>
+                        <p>Dance-7pm</p>
+                    </div>
+                    <div class="col-md-2">
+                        <h2>Fri.</h2>
+                        <p>Core-6am</p>
+                        <p>Pilates-7am</p>
+                        <p>HIIT-1pm</p>
+                        <p>TRX-6pm</p>
+                    </div>
+                    <div class="col-md-2">
+                        <h2>Sat.</h2>
+                        <p>Trx-9am</p>
+                        <p>Yoga-10am</p>
+                        <p>Pilates-12pm</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Sign in an Book now!</button>
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="email">Email</label>
+                                        <input type="text" class="form-control-sm" id="Inputemail" aria-describedby="emailHelp" placeholder="Email">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password">Password</label>
+                                        <input type="password" class="form-control-sm" id="Inputpassword" placeholder="Password">
+                                    </div>
+                                    <button type="button" class="btn btn-success modal-button" data-toggle="modal" data-target="#myModal">Submit</button>
+                                </form>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
     <div class="row">
-      <div class="row">
         <div class="col-lg-12 facilities">
-          <p class="facilities-icon"><i class="fa fa-heartbeat"></i>    Cardio Area</a>
-          <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i>    Strength Training</p>
-          <p class="facilities-icon"><i class="fa fa-cutlery"></i>    Diet Planning</p>
+            <p class="facilities-icon"><i class="fa fa-heartbeat"></i> Cardio Area</p>
+            <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i> Strength Training</p>
+            <p class="facilities-icon"><i class="fa fa-cutlery"></i> Diet Planning</p>
         </div>
     </div>
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Find us here!</h3>
-                    <p>74 Parnell Street,<br/>Dublin 1</p>
+                <h4 class="uppercase">Find us here!</h4>
+                <p>74 Parnell Street,<br/>Dublin 1</p>
             </div>
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase general-sub">Opening Hours</h3>
-                    <p>Monday - Friday: 6am-10pm <br/> Saturday: 8am-8pm<br/> Sunday:9am-5pm
-                    </p>
+                <h4 class="uppercase general-sub">Opening Hours</h4>
+                <p>Monday - Friday: 6am-10pm <br/> Saturday: 8am-8pm<br/> Sunday:9am-5pm
+                </p>
             </div>
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Contact</h3>
-                    <p>Phone: 01 0309906 <br/> Email: info@dublinfitness.com
-                        <ul class="list-inline social">
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                <h4 class="uppercase">Contact</h4>
+                <p>Phone: 01 0309906 <br/> Email: info@dublinfitness.com
+                    <ul class="list-inline social">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-facebook"></i>
                      </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-twitter"></i>
                      </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-instagram"></i>
                      </a>
-                            </li>
+                        </li>
 
-                        </ul>
-                        <p/>
+                    </ul>
+                </p>
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
