--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
 
 <body>
     <header>
-        <div class="navbar">
-            <a class="active" href="index.html"><i class="fa fa-trophy"></i>   Dublin Fitness</a>
-            <a href="joinus.html"><i class="fa fa-pencil"></i>   Join up!</a>
-            <a href="members.html"><i class="fa fa-user"></i>   Members</a>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="navbar">
+                    <a class="active" href="index.html"><i class="fa fa-trophy"></i>   Dublin Fitness</a>
+                    <a href="joinus.html"><i class="fa fa-pencil"></i>   Join up!</a>
+                    <a href="members.html"><i class="fa fa-user"></i>   Members</a>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-12 facilities">
-                <p><i></i></p>
+                <p></p>
             </div>
         </div>
     </header>
     <section>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -67,45 +71,44 @@
     </section>
     <div class="row">
         <div class="col-lg-12 facilities">
-          <p class="facilities-icon"><i class="fa fa-heartbeat"></i>    Cardio Area</a>
-          <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i>    Strength Training</p>
-          <p class="facilities-icon"><i class="fa fa-cutlery"></i>    Diet Planning</p>
+            <p class="facilities-icon"><i class="fa fa-heartbeat"></i> Cardio Area</p>
+            <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i> Strength Training</p>
+            <p class="facilities-icon"><i class="fa fa-cutlery"></i> Diet Planning</p>
         </div>
     </div>
     <footer class="container-fluid">
-
         <div class="row">
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Find us here!</h3>
-                    <p>74 Parnell Street,<br/>Dublin 1</p>
+                <h4 class="uppercase">Find us here!</h4>
+                <p>74 Parnell Street,<br/>Dublin 1</p>
             </div>
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase general-sub">Opening Hours</h3>
-                    <p>Monday - Friday: 6am-10pm <br/> Saturday: 8am-8pm<br/> Sunday:9am-5pm
-                    </p>
+                <h4 class="uppercase general-sub">Opening Hours</h4>
+                <p>Monday - Friday: 6am-10pm <br/> Saturday: 8am-8pm<br/> Sunday:9am-5pm
+                </p>
             </div>
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Contact</h3>
-                    <p>Phone: 01 0309906 <br/> Email: info@dublinfitness.com
-                        <ul class="list-inline social">
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                <h4 class="uppercase">Contact</h4>
+                <p>Phone: 01 0309906 <br/> Email: info@dublinfitness.com
+                    <ul class="list-inline social">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-facebook"></i>
                      </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-twitter"></i>
                      </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-instagram"></i>
                      </a>
-                            </li>
+                        </li>
 
-                        </ul>
-                        <p/>
+                    </ul>
+                </p>
             </div>
         </div>
     </footer>
