--- a/joinus.html
+++ b/joinus.html
@@ -21,7 +21,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 facilities">
-                <p><i></i></p>
+                <p></p>
             </div>
         </div>
     </header>
@@ -39,54 +39,78 @@
                 <h3>Come Join us today!</h3>
                 <p>Here at Dublin Fitness we want to help you achieve your fitness goals.Whether you want to get fitter,stronger or leaner we we tailor a fitness and diet plan to suit your exsisting lifestyle. With state of the art fitness equipment and
                     a wide range of classes available we will help you find the most fun way to achieve your fitness goals. Join today to recieve a free one weeks trial!</p>
-                <button type="button" class="btn btn-success">Join up!</button>
+                <div class="container">
+                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Join up!</button>
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="email">Name</label>
+                                        <input type="text" class="form-control-sm" id="Inputname" aria-describedby="emailHelp" placeholder="Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleInputemail">Email</label>
+                                        <input type="email" class="form-control-sm" id="exampleInputemail" placeholder="Email">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                    </div>
+                                    <button type="button" class="btn btn-success modal-button" data-toggle="modal" data-target="#myModal">Submit</button>
+                                </form>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
-
     </section>
     <div class="row">
         <div class="col-lg-12 facilities">
-          <p class="facilities-icon"><i class="fa fa-heartbeat"></i>    Cardio Area</a>
-          <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i>    Strength Training</p>
-          <p class="facilities-icon"><i class="fa fa-cutlery"></i>    Diet Planning</p>
+            <p class="facilities-icon"><i class="fa fa-heartbeat"></i> Cardio Area</p>
+            <p class="facilities-icon"><i class="fa fa-hand-rock-o"></i> Strength Training</p>
+            <p class="facilities-icon"><i class="fa fa-cutlery"></i> Diet Planning</p>
         </div>
     </div>
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Find us here!</h3>
-                    <p>74 Parnell Street,<br/>Dublin 1</p>
+                <h4 class="uppercase">Find us here!</h4>
+                <p>74 Parnell Street,<br/>Dublin 1</p>
             </div>
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase general-sub">Opening Hours</h3>
-                    <p>Monday - Friday: 6am-10pm <br/> Saturday: 8am-8pm<br/> Sunday:9am-5pm
-                    </p>
+                <h4 class="uppercase general-sub">Opening Hours</h4>
+                <p>Monday - Friday: 6am-10pm <br/> Saturday: 8am-8pm<br/> Sunday:9am-5pm
+                </p>
             </div>
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Contact</h3>
-                    <p>Phone: 01 0309906 <br/> Email: info@dublinfitness.com
-                        <ul class="list-inline social">
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                <h4 class="uppercase">Contact</h4>
+                <p>Phone: 01 0309906 <br/> Email: info@dublinfitness.com
+                    <ul class="list-inline social">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-facebook"></i>
                      </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-twitter"></i>
                      </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a target="_blank" href="#">
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
                          <i class="fa fa-instagram"></i>
                      </a>
-                            </li>
+                        </li>
 
-                        </ul>
-                        <p/>
+                    </ul>
+                </p>
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
