--- a/joinus.html
+++ b/joinus.html
@@ -75,7 +75,7 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Find us here!</h4>
+                <h4 class="uppercase">Find us Here!</h4>
                 <p>74 Parnell Street,<br/>Dublin 1</p>
             </div>
             <div class="footer-section col-sm-4">
