--- a/members.html
+++ b/members.html
@@ -29,9 +29,11 @@
         <div class="row">
             <div class="col-md-4 testimonials ">
                 <h2>Classes</h2>
-                <p></p>
-                <p>John Doe - "The range of facilities and classes at Dublin Fitness is great. It reaally helps to sustain interest in working out"</p>
-                <p>Joe Doe - "I Tried every fad diet under the sun but Dublin Fitness really helped me lose weight and keep it off"</p>
+                <p>All classes are one hour long except HIIT classes which are thirty minutes
+                    <br> Classes can be booked online, over the phone or by chatting to us on Facebook.
+                    <br> Classes can fill up quickly at peak times so book in advance to advoid dissapointment.
+                    <br> If you need to cancel your place in a class please do so at least 24hrs in advance where possible</p>
+
             </div>
 
             <div class="col-md-8 timetable">
@@ -115,7 +117,7 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-section col-sm-4">
-                <h4 class="uppercase">Find us here!</h4>
+                <h4 class="uppercase">Find us Here!</h4>
                 <p>74 Parnell Street,<br/>Dublin 1</p>
             </div>
             <div class="footer-section col-sm-4">
